--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -23,7 +26,20 @@
         </activity>
         <activity
             android:name=".SigninActivity"
-            android:label="@string/title_activity_signin"></activity>
+            android:label="@string/title_activity_signin" />
+        <activity
+            android:name=".SignupActivity"
+            android:label="@string/title_activity_signup" />
+        <activity
+            android:name=".PasswordActivity"
+            android:label="@string/title_activity_password" />
+        <activity
+            android:name=".NameActivity"
+            android:label="@string/title_activity_name" />
+        <activity android:name=".InviteCodeActivity"></activity>
+
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
     </application>
 
 </manifest>
