--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".AccountMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,15 +28,15 @@
             android:name=".SigninActivity"
             android:label="@string/title_activity_signin" />
         <activity
-            android:name=".SignupActivity"
+            android:name=".SignupEmailActivity"
             android:label="@string/title_activity_signup" />
         <activity
-            android:name=".PasswordActivity"
+            android:name=".SignupPasswordActivity"
             android:label="@string/title_activity_password" />
         <activity
-            android:name=".NameActivity"
+            android:name=".SignupNameActivity"
             android:label="@string/title_activity_name" />
-        <activity android:name=".InviteCodeActivity" />
+        <activity android:name=".SignupInviteCodeActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
