--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
             android:name=".UserLocationMainActivity"
             android:label="@string/title_activity_user_location_main"
             android:theme="@style/AppTheme" />
+        <activity android:name=".JoinCirlceActivity"></activity>
     </application>
 
 </manifest>
