--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:28.0.0-rc01'
     implementation 'com.github.karanchuri:PermissionManager:0.1.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.android.gms:play-services-nearby:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.GoodieBag:Pinview:v1.3'
