--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,10 +63,10 @@
             android:name=".activities.UserLocationMainActivity"
             android:label="@string/title_activity_user_location_main"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activities.JoinCirlceActivity" />
-        <activity android:name=".activities.MyCircleActivity" />
+        <activity android:name=".activities.FollowActivity" />
+        <activity android:name=".activities.FollowersActivity" />
         <activity android:name=".activities.LiveMapActivity" />
-        <activity android:name=".activities.JoinedCirclesActivity" />
+        <activity android:name=".activities.FollowedActivity" />
         <activity android:name=".activities.AlertCenterActivity" />
         <activity android:name=".activities.SigninEmailActivity" />
         <activity android:name=".activities.SigninPasswordActivity" />
