geofence circle draw manual commit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,48 +30,42 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //support
     implementation 'com.android.support:design:28.0.0-rc01'
     implementation 'com.android.support:support-vector-drawable:28.0.0-rc01'
     implementation 'com.android.support:support-annotations:28.0.0-rc01'
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    //verticalseekbar
+    implementation 'com.h6ah4i.android.widget.verticalseekbar:verticalseekbar:0.7.2'
 
     //firebase
     implementation 'com.google.firebase:firebase-core:16.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
-
     //image circle view
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
     //image crop
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
-
     //permission
     implementation 'com.github.karanchuri:PermissionManager:0.1.0'
-
     //play services
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-places:15.0.1'
     implementation 'com.google.android.gms:play-services-nearby:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
-
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     //pinview
     implementation 'com.github.GoodieBag:Pinview:v1.3'
-
     //circle button
     implementation 'com.github.markushi:circlebutton:1.1'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.firebase:geofire-android:2.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
