--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,7 @@
         <activity
             android:name=".activities.signup_activities.SignupEmailActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name=".activities.signup_activities.SignupPasswordActivity"
             android:screenOrientation="portrait"
@@ -43,7 +42,6 @@
             android:name=".activities.signup_activities.SignupProfileActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".activities.invitation_activity.InvitationActivity"
             android:screenOrientation="portrait" />
@@ -55,13 +53,7 @@
             android:name=".activities.signin_activities.SigninPasswordActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-
-        <activity
-            android:name=".activities.alert_activities.AlertCenterActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
-
-        <activity android:name=".activities.alert_activities.SendHelpAlertsActivity"></activity>
+        <activity android:name=".activities.alert_activities.SendHelpAlertsActivity" />
         <activity
             android:name=".activities.follow_activity.FollowActivity"
             android:screenOrientation="portrait" />
@@ -82,10 +74,11 @@
             android:name=".services.LocationShareService"
             android:enabled="true"
             android:exported="false" />
+
         <activity
             android:name=".activities.maps_activities.CurrentLocationActivity"
             android:label="Map"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -102,6 +95,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <activity android:name=".activities.alert_activities.AlertCenterActivity"></activity>
     </application>
 
 </manifest>
